--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<link rel="stylesheet" href="dist/tailwind.css" />
 </head>
-<body class="bg-[#03203C] text-white">
+<body class="bg-[#03203C] text-white" style="width: 600px;">
 	
 	<header class="bg-gray-600">
 		<div class="container mx-auto">
@@ -33,19 +33,6 @@
 				<button class="stop-recording mx-4 flex-1 bg-blue-500 p-4 uppercase text-lg font-bold transition-all duration-300 hover:opacity-90 disabled:opacity-50" disabled>
 					Stop Recording
 				</button>
-			</div>
-
-			<div class="recorded-video-wrap hidden">
-				<h2 class="text-xl text-gray-500 uppercase font-light mb-4">
-					Recorded video
-				</h2>
-
-				<video src="" class="recorded-video bg-black w-full h-auto mb-8"></video>
-				<div class="flex flex-wrap -mx-4">
-					<a class="download-video text-center mx-4 flex-1 bg-gradient-to-br from-blue-500 to to-rose-500 p-4 uppercase text-lg font-bold transition-all duration-300 hover:opacity-90 disabled:opacity-50" disabled>
-						Download
-					</a>
-				</div>
 			</div>
 		</div>
 	</main>
