--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<link rel="stylesheet" href="dist/tailwind.css" />
 </head>
-<body class="bg-[#03203C] text-white" style="width: 600px;">
+<body class="bg-[#03203C] text-white">
 	
 	<header class="bg-gray-600">
 		<div class="container mx-auto">
